--- a/ps/style.css
+++ b/ps/style.css
@@ -17,7 +17,7 @@ body {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
-	background: url("bg1.jpg") no-repeat fixed center;
+	background: url("pv.jpg") no-repeat fixed center;
 	background-size: cover;
 }
 
